--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "lint-focus": "standard-focus",
     "dev": "node server.js",
     "build": "next build",
-    "start": "NODE_ENV=production server=https://code-peer-server.herokuapp.com node server.js"
+    "start": "npm run build; NODE_ENV=production server=https://code-peer-server.herokuapp.com node server.js"
   },
   "keywords": [
     "p2p",
